--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="do_not_show_splash">Don\'t show splash</string>
     <string name="current_task">Current</string>
     <string name="done_task">Done</string>
+    <string name="dialog_title">Adding task</string>
+    <string name="task_title">Title</string>
+    <string name="task_date">Date</string>
+    <string name="task_time">Time</string>
+    <string name="dialog_ok">Ok</string>
+    <string name="dialog_cancel">Cancel</string>
+    <string name="dialog_error_empty_title">Please, enter the title</string>
 </resources>
