--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="dialog_ok">Ok</string>
     <string name="dialog_cancel">Cancel</string>
     <string name="dialog_error_empty_title">Please, enter the title</string>
+    <string name="dialog_remove_message">Are you sure want to delete this task?</string>
+    <string name="removed">Removed</string>
 </resources>
