AdMob implemented. Some bugs fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="separator_tomorrow">Tomorrow</string>
     <string name="separator_future">Future</string>
     <string name="dialog_editing_title">Editing task</string>
+    <string name="banner_ad_unit_id">ca-app-pub-6784520601040456/7994286128</string>
 </resources>
